# dipy

./: .codecov.yml  .codespellrc  .coveragerc  .flake8  .gitattributes  .gitignore  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  AUTHOR  CNAME  CONTRIBUTING  CONTRIBUTING.md  Changelog  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  NODDIx.py  README  README.rst  README.txt  README_odffp.rst  __init__.py  affine.txt  appveyor.yml  azure-pipelines.yml  bench.ini  build_helpers.py  check_flags.py  conftest.py  cythexts.py  dependencies.html  dev.py  dicoms_2_tracks.py  examples_index.html  faq.html  file  functools  (+41 more)
dipy/: COMMIT_INFO.txt  __config__.pyx  __init__.py  __init__.pyi  conftest.py  info.py  meson.build  performance.pyx  pkg_info.py  scrap.py
dipy/align/: __init__.py  __init__.pyi  _public.py  alispeed.pyx  aniso2iso.py  api.py  bmd.pyx  bundlemin.pyx  cc.pyx  cpd.py  crosscorr.pyx  disco.py  em.pyx  expectmax.pyx  fused_types.pxd  have_openmp.h  imaffine.py  imwarp.py  mattes.pyx  meson.build  metrics.py  parzenhist.pyx  registration_common.py  reslice.py  scalespace.py  setup.py  ssd.pyx  streamlinear.py  streamwarp.py  sumsqdiff.pyx  syn_registration.py  transforms.pxd  transforms.pyx  utils.py  vector_fields.pxd  vector_fields.pyx
dipy/atlasing/: bundles.py  meson.build
dipy/bias/: Goal0_1.py  Improved_bias_correction.py  Statistical_based_non_paramatric_learning_on_N3stratergy.py  bias_correction.py  bspline_fit.py  correct2.py  correction.py
dipy/boots/: __init__.py  meson.build  resampling.py
dipy/bundle/: descriptors.py
dipy/core/: __init__.py  __init__.pyi  correction.py  dsi_sphere.py  dti.py  generalized_q_sampling.py  geometry.py  gradient_check.py  gradients.py  graph.py  gtable.py  histeq.py  interpolation.pxd  interpolation.pyx  linalg.pxd  linalg.pyx  maskedview.py  math.pxd  math.pyx  meshes.py  meson.build  modelarray.py  ndindex.py  onetime.py  optimize.py  parallel.py  performance.pyx  profile.py  pso.py  pyalloc.pxd  qball.py  reconstruction_performance.pyx  rng.py  sphere.py  sphere_stats.py  stensor.py  streamline.py  streamlines.py  streamlinespeed.pyx  subdivide_octahedron.py  (+10 more)
dipy/correct/: __init__.py  disco.py  meson.build
dipy/data/: 3shells-1000-2000-3500-N193.bval  3shells-1000-2000-3500-N193.bvec  55dir_grad.bval  C.npy  ScannerVectors_GQI101.txt  __init__.py  cb_2.pkl  data_b1k_b2k.bval  data_b1k_b2k.bvec  dipy_colormaps.json  dsi4169_b_table.txt  dsi515_b_table.txt  eg_3voxels.pkl  evenly_distributed_sphere_642.npz  evenly_distributed_sphere_724.npz  fetcher.py  grad_514.txt  gtab_3shell.txt  life_matlab_rmse.npy  life_matlab_weights.npy  lut.csv  meson.build  small_101D.bval  small_101D.bvec  t1_coronal_slice.npy
dipy/demos/: hbm2010_demo.py  tractography_clustering.py  view_clusters.py  view_pbc_training_set_clustered.py
dipy/denoise/: __init__.py  __init__.pyi  _bias_correction.pyx  _gpu_mppca.py  _localpca_fast.pyx  adaptive_patch2self.py  adaptive_soft_matching.py  ascm.py  bias_correction.py  change_FOV.py  change_FOV_parallel.py  cropMask.py  denspeed.pyx  denspeed_backup.pyx  eig_localpca.pyx  enhancement_kernel.pyx  fast_local_covariance.pyx  fast_lpca.pyx  fast_noise_estimate.pyx  fov_class.py  gibbs.py  hsm.py  hyp1f1.pyx  localPCA_denoise.py  localpca.py  localpca_slow.py  meson.build  mixingsubband.py  nlmeans.py  nlmeans_block.pyx  noise_estimate.py  noise_estimate_LPCA.py  noise_estimate_localpca.py  non_local_means.py  patch2self.py  patch2self3.py  pca_noise_estimate.pyx  pca_speed.pyx  qc.py  randomlpca_denoise.pyx  (+11 more)
dipy/direction/: __init__.py  __init__.pyi  bingham.py  bootstrap_direction_getter.py  bootstrap_direction_getter.pyx  closest_peak.py  closest_peak_direction_getter.pxd  closest_peak_direction_getter.py  closest_peak_direction_getter.pyx  direction_getter.pxd  direction_getter.pyx  meson.build  peak_direction.pxd  peak_direction.pyx  peak_direction_getter.pxd  peak_direction_getter.pyx  peaks.py  pmf.pxd  pmf.pyx  pmf_direction_getter.py  probabilistic_direction_getter.pxd  probabilistic_direction_getter.py  probabilistic_direction_getter.pyx  ptt_direction_getter.pyx
dipy/examples/: tractography_clustering.py
dipy/experiments/: check_flipping.py  pbc_training_set_clustering.py  tractography_clustering_using_larch.py
dipy/fixes/: argparse.py  scipy.py
dipy/io/: __init__.py  __init__.pyi  bmatrix.py  bvalues.py  bvectxt.py  csa_header_ian.py  csareader.py  dicomreaders.py  dicomwrappers.py  dpy.py  dwiparams.py  fsl.py  gradients.py  image.py  meson.build  peaks.py  pickle.py  pickles.py  siemens_dwi.py  stateful_surface.py  stateful_tractogram.py  statefull_tractogram.py  streamline.py  structreader.py  surface.py  track_volumes.pyx  trackvis.py  utils.py  vectors.py  vtk.py
dipy/ivim/: __init__.py  ivim.py
dipy/multi/: __init__.py  config.py  parallel.py
dipy/nn/: __init__.py  __init__.pyi  cnn_1d_denoising.py  deepn4.py  evac.py  finta_model.py  histo_resdnn.py  meson.build  metrics.py  model.py  nsdn_histology.py  registration.py  resdnn.py  resdnn_hcp_example.py  resdnn_histology.py  resdnn_histology_example.py  synb0.py  utils.py
dipy/parallel/: config.py  main.py
dipy/reconst/: FORCE_README.md  NODDIx.py  NODDIx_cleaned.py  NODDIx_single_fiber.py  __init__.py  __init__.pyi  _force_heap.pxd  _force_heap.pyx  _force_search.pxd  _force_search.pyx  _peakdg.pyx  activeax.py  activeax_fast.py  activeax_in_vivo.py  activeax_in_vivo_3compartments.py  base.py  bayes_learn.py  bd_min.py  beltrami.py  beltrami_fwdti.py  beltrami_main.py  bingham.py  brainsuite_shore.py  cache.py  canal.py  charmed.py  count_fibers.py  cross_validation.py  csdeconv.py  cti.py  dandelion.py  dg.py  dirspeed.pyx  dki.py  dki_micro.py  dkispeed.pxd  dkispeed.pyx  dni.py  dsi.py  dti.py  (+62 more)
dipy/reconstruction/: dandelion.py  dti.py
dipy/segment/: __init__.py  __init__.pyi  bundles.py  clustering.py  clustering_algorithms.html  clustering_algorithms.pyx  clusteringspeed.html  clusteringspeed.pxd  clusteringspeed.pyx  cythonutils.html  cythonutils.pxd  cythonutils.pyx  fss.py  (+32 more)
(+2114 files in other folders)
